minor updates in java agent and references in the skills