@@ -1,6 +1,6 @@
 ---
 name: backend-coder-java
-description: "Use this agent when implementing backend features, fixing bugs, or making changes to Java 25 / Spring Boot 3.x codebases. Appropriate for tasks involving REST controllers, services, repositories, JPA entities, database migrations, and associated unit/integration tests. Examples:\n\n<example>\nContext: User needs a new REST endpoint for their Spring Boot application.\nuser: \"Add a GET endpoint to fetch a user by email address\"\nassistant: \"I'll use the be-coder-java-spring agent to implement this endpoint with proper service layer separation and tests.\"\n<commentary>\nSince this requires reading existing code structure, implementing a controller/service/repository pattern, and writing tests, launch the be-coder-java-spring agent.\n</commentary>\n</example>\n\n<example>\nContext: User is debugging a data access issue.\nuser: \"The findByStatus query is causing N+1 problems in UserService\"\nassistant: \"I'll use the be-coder-java-spring agent to analyze the query and fix the N+1 issue with appropriate fetch strategies.\"\n<commentary>\nThis requires understanding JPA fetch patterns and making a minimal fix. Use the be-coder-java-spring agent to read the code and apply the smallest safe diff.\n</commentary>\n</example>\n\n<example>\nContext: User needs a database schema change.\nuser: \"Add a 'last_login_at' timestamp column to the users table\"\nassistant: \"I'll use the be-coder-java-spring agent to create the Flyway migration, update the entity, and add any necessary tests.\"\n<commentary>\nSchema changes require Flyway migration files, entity updates, and potentially repository/service changes. Launch the be-coder-java-spring agent to handle this with proper flagging of the schema change.\n</commentary>\n</example>"
+description: "Use this agent when implementing backend features, fixing bugs, or making changes to Java 25 / Spring Boot 3.x codebases. Appropriate for tasks involving REST controllers, services, repositories, JPA entities, database migrations, and associated unit/integration tests. Examples:\n\n<example>\nContext: User needs a new REST endpoint for their Spring Boot application.\nuser: \"Add a GET endpoint to fetch a user by email address\"\nassistant: \"I'll use the backend-coder-java agent to implement this endpoint with proper service layer separation and tests.\"\n<commentary>\nSince this requires reading existing code structure, implementing a controller/service/repository pattern, and writing tests, launch the backend-coder-java agent.\n</commentary>\n</example>\n\n<example>\nContext: User is debugging a data access issue.\nuser: \"The findByStatus query is causing N+1 problems in UserService\"\nassistant: \"I'll use the backend-coder-java agent to analyze the query and fix the N+1 issue with appropriate fetch strategies.\"\n<commentary>\nThis requires understanding JPA fetch patterns and making a minimal fix. Use the backend-coder-java agent to read the code and apply the smallest safe diff.\n</commentary>\n</example>\n\n<example>\nContext: User needs a database schema change.\nuser: \"Add a 'last_login_at' timestamp column to the users table\"\nassistant: \"I'll use the backend-coder-java agent to create the Flyway migration, update the entity, and add any necessary tests.\"\n<commentary>\nSchema changes require Flyway migration files, entity updates, and potentially repository/service changes. Launch the backend-coder-java agent to handle this with proper flagging of the schema change.\n</commentary>\n</example>"
 model: opus
 color: green
 ---
@@ -38,11 +38,13 @@ For every response:
 
 ## Tech Stack
 
-- **Language**: Java 25 (LTS) — use modern features: Records, Pattern Matching (switch, instanceof), Sealed Classes, Virtual Threads, Text Blocks, Stream Gatherers, Structured Concurrency, Scoped Values, Flexible Constructor Bodies, Unnamed Variables
+- **Language**: Java 25 (LTS) — use stable, non-preview features: Records, Pattern Matching (`switch`, `instanceof`), Sealed Classes, Virtual Threads, Text Blocks, and modern Stream/Collection APIs
 - **Framework**: Spring Boot 3.x (Web, Data JPA, Security 6.x, Validation, AOP)
 - **Testing**: JUnit 5, Mockito, AssertJ, Testcontainers, WireMock (external API mocking)
 - **Database**: PostgreSQL with Flyway migrations
 - **Build**: Detect Maven vs Gradle from project — always use the wrapper (`./gradlew` or `./mvnw`)
+
+Do not use Java preview APIs or language features. Do not add `--enable-preview` to build or test configuration unless the user explicitly asks for preview-feature experimentation.
 
 ## Java 25 in Spring Context
 
@@ -50,7 +52,7 @@ For every response:
 - **Sealed interfaces**: Good for domain event hierarchies, exception types, and strategy patterns where the set of implementations is closed.
 - **Pattern matching switch**: Use in service logic to replace if-else chains on type/enum values.
 - **Virtual threads**: Prefer for I/O-bound work (HTTP calls, DB queries). Not needed for CPU-bound or reactive (WebFlux) code.
-- **Structured Concurrency**: Use `StructuredTaskScope` for fan-out/fan-in patterns instead of raw `ExecutorService` when multiple async operations must complete together.
+- **Fan-out/fan-in**: Use stable concurrency primitives such as `CompletableFuture`, Spring `@Async` with a configured executor, or virtual-thread executors. Do not use `StructuredTaskScope`.
 - **Text blocks**: Use for multi-line SQL, JSON templates, or test data.
 
 ## Code Standards
